# even-counter

./: .gitignore  CMakeLists.txt  README.md  acorn.agda-lib  install.ps1  install.sh  skeleton.agda-lib
backend/: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  Setup.hs  SkeletonConfigVersion.cmake  acorn.agda-lib  acorn.cabal  cabal.project  even-counter.agda-lib  even-counter.cabal  skeleton.agda-lib  skeleton.cabal
backend/docs/: packages.puml  runtime.puml  simplified_structure.puml  structure.puml
backend/include/: Acorn.h  Future.h  Interaction.h  TinyHsFFI.h
backend/src/: .gitignore  All.agda  AppState.agda  Interaction.agda  Logic.agda  Main.hs  Platform.hs  TestMain.hs  acornInterruptEvaluation.c  interruptEvaluation.c
backend/src/Algebra/: Field.agda  Order.agda  Ring.agda  SemiRing.agda  Setoid.agda
backend/src/Function/: AlternatingSeries.agda  Exp.agda  SquareRoot.agda  Trigonometric.agda
backend/src/HaskellInstance/: Eq.agda  Floating.agda  Fractional.agda  NFData.agda  Num.agda  Number.agda  Show.agda
backend/src/Implementation/: Decimal.agda  Dyadic.agda  Frac.agda  Int.agda  Nat.agda  Rational.agda
backend/src/Operator/: Abs.agda  Cast.agda  Decidable.agda  ExactShift.agda  Pow.agda  Shift.agda  ShiftL.agda
backend/src/Platform/: Posix.agda  Win32.agda
backend/src/RealTheory/: AppRational.agda  Completion.agda  Continuity.agda  Interval.agda  MetricSpace.agda  Real.agda
backend/src/RealTheory/Instance/: Cast.agda  Pow.agda
backend/src/Shell/: CalcState.agda  Evaluation.agda  Exp.agda  Interaction.agda  Parser.agda  Platform.hs  Statement.agda  Value.agda
backend/src/Shell/Platform/: Posix.agda  Win32.agda
backend/src/Test/: Parity.agda  Parser.agda
backend/src/Test/Haskell/: Parity.agda  Parser.agda
backend/src/Tool/: Cheat.agda  ErasureProduct.agda  Foreign.agda  Future.agda  PropositionalEquality.agda  Relation.agda  Stream.agda  Witness.agda
frontend/: .gitignore  CMakeLists.txt  README.md
frontend/docs/: classes.puml  interrupt_sequence.puml  parser.md  use_case.puml
frontend/include/: CMakeLists.txt
frontend/include/Backend/: CMakeLists.txt  Future.hpp  HsAppStateWrapper.hpp
frontend/include/View/: CMakeLists.txt  HistoryItemWidget.h  MainWindow.h  PreciseOutputWindow.h  PrimaryLineEdit.h
frontend/include/ViewModel/: AsyncCalculationAlreadyInProgressException.hpp  CMakeLists.txt  HsAppStateWrapper.hpp  HsCalcStateWrapper.hpp  MainViewModel.hpp  OddParameterException.hpp  PreciseOutputViewModel.hpp  RealBaseType.hpp  ResultType.hpp
frontend/src/: CMakeLists.txt
frontend/src/Backend/: CMakeLists.txt  Future.cpp  HsAppStateWrapper.cpp
frontend/src/Main/: CMakeLists.txt  main.cpp
frontend/src/Test/: CMakeLists.txt  ViewModelTest.cpp  main.cpp
frontend/src/View/: CMakeLists.txt  HistoryItemWidget.cpp  HistoryItemWidget.ui  MainWindow.cpp  MainWindow.ui  PreciseOutputWindow.cpp  PreciseOutputWindow.ui  PrimaryLineEdit.cpp
frontend/src/ViewModel/: CMakeLists.txt  Future.cpp  HsAppStateWrapper.cpp  HsCalcStateWrapper.cpp  MainViewModel.cpp  PreciseOutputViewModel.cpp  RealBaseType.cpp  ResultType.cpp
