cabal-version:       2.2
name:                skeleton
version:             0.1
synopsis:            A skeleton project to get started with using the Agda SDK.

-- Ouch... these need to be listed.
extra-source-files:  skeleton.agda-lib,
                     src/*.agda
                     src/Platform/*.agda,
                     src/Test/*.agda,
                     src/Test/Haskell/*.agda,
                     src/Tool/*.agda

custom-setup
  setup-depends:
    base     >= 4.13    && < 4.20,
    Cabal    >= 2.2,
    -- this is my custom version of agda2hs; see cabal.project
    -- agda2hs,
    process

library
  -- it only searches online and not among local packages;
  -- which is ugly because I use the version on my own machine
  -- so I'll just comment this out for now
  -- build-depends:       agda2hs >= 1.3 && < 2.0
  build-depends:       base     >= 4.13    && < 4.20,
                       containers,
                       text,
                       deepseq >= 1.4
  if os(windows)
    build-depends:     Win32 >= 2.12
  elif os(linux) || os(darwin)
    build-depends:     unix >= 2.8
  hs-source-dirs:      src
  -- unfortunately, they all have to be listed here... twice.
  autogen-modules:     All,
                       Logic,
                       AppState,
                       Interaction,
                       Tool.ErasureProduct,
                       Tool.Future
  exposed-modules:     All,
                       Logic,
                       AppState,
                       Interaction,
                       Tool.ErasureProduct,
                       Tool.Future,
                       Platform
  if os(windows)
    autogen-modules:   Platform.Win32
    exposed-modules:   Platform.Win32
  elif os(linux) || os(darwin)
    autogen-modules:   Platform.Posix
    exposed-modules:   Platform.Posix
  default-language:    GHC2021
  -- for interrupting the calculation thread
  -- with a foreign call
  ghc-options:         -threaded

executable Shell
  hs-source-dirs:      src
  main-is:             Main.hs
  -- it only searches online and not among local packages;
  -- which is ugly because I use the version on my own machine
  -- so I'll just comment this out for now
  -- build-depends:       agda2hs >= 1.3 && < 2.0,
  build-depends:       base     >= 4.13    && < 4.20,
                       containers,
                       text,
                       deepseq >= 1.4,
                       skeleton
  if os(windows)
    build-depends:     Win32 >= 2.12
  elif os(linux) || os(darwin)
    build-depends:     unix >= 2.8
  default-language:    GHC2021
  -- for interrupting the calculation thread
  -- with a foreign call
  ghc-options:         -threaded

test-suite QuickCheckTests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             TestMain.hs
  autogen-modules:     Test.Haskell.ExampleTest
  other-modules:       Test.Haskell.ExampleTest
  build-depends:       base     >= 4.13    && < 4.20,
                       containers,
                       text,
                       deepseq >= 1.4,
                       skeleton,
                       QuickCheck >= 2.14
  default-language:    GHC2021
